fixed the modal for not showing the css properties

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,19 +13,19 @@ nav {
   padding: 10px 0;
 }
 
-#newTask {
+#newTask-form {
   display: flex;
   flex-direction: column;
   margin-left: 30px;
   margin-right: 30px;
 }
 
-#newTask div {
+#newTask-form div {
   padding: 5px 0;
   text-align: left;
 }
 
-#newTask button {
+#newTask-form button {
 align-self: center;
 width: 50%;
 padding: 10px;
